[package]
name = "Med-Tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["image"] }
serde_json = "1.0.145"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = false

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false


[profile.release-lto]
inherits = "release"
lto = true
