[package]
name = "Med-Tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dark-light = "2.0.0"
iced = { version = "0.13.1", features = ["image","tokio"] }
serde_json = "1.0.145"
uuid = {version = "1.18.1", features = ["v4"]}

[profile.dev]
opt-level = 1
debug = true
overflow-checks = false

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false


[profile.release-lto]
inherits = "release"
lto = true
