[package]
name = "Med-Tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dark-light = "2.0.0"
dirs = "6.0"
iced = { version = "0.14.0", features = ["image","tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
uuid = {version = "1.18.1", features = ["v4"]}
rodio = { version = "0.20", default-features = false, features = ["symphonia-vorbis", "symphonia-wav"] }
notify-rust = "4"
futures = "0.3"
tokio = { version = "1", features = ["time", "sync"] }
tray = "0.1.2"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = false

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false


[profile.release-lto]
inherits = "release"
lto = true
